fix letter-spacing to the title&description in .instuctor-section

--- a/css/main.css
+++ b/css/main.css
@@ -1300,12 +1300,14 @@ h2 {
     font-size: 64px;
     line-height: 95px;
     margin-bottom: 1px;
+    letter-spacing: .6px;
   }
 
   .instructor__description {
     font-size: 24px;
     line-height: 28px;
     margin-bottom: 60px;
+    letter-spacing: -.79px;
   }
 
   .instructor__list {
